--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^3.2.0",
+    "img-loader": "^3.0.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "path": "^0.12.7",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
